--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<html >
+<div class="container" style="background:khaki " >
+<div class="row" >
+  <div class="col-md-6 offset-md-3" >
+      <app-todo >       
+      </app-todo>
+  </div>
+</div>
+</div>
+</html>
