--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<html >
-<div class="container" style="background:khaki " >
+<html style="background:khaki ">
+<div class="container"  >
 <div class="row" >
   <div class="col-md-6 offset-md-3" >
       <app-todo >       
